--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IP Logger</title>
+
+    <!-- Open Graph meta tags for Discord embeds -->
+    <meta property="og:title" content="YT2009r">
+    <meta property="og:description" content="broadcast yourself">
 </head>
 <body>
 
